3tier with ingress/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: your-namespace-name
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
