3tier with ingress/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: your-namespace-name
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 5173
      targetPort: 5173
